# PyPass

./: .gitignore  README.md  add-version.sh  bg.py  build.sh  navigation.py  pypass-polars.py  pypass.py  pyproject.toml  requirements.txt  tex2ing.py  upgrade_pkg.sh
.github/workflows/: build.yml
archive/: requirements.txt
pypass/: pypass.py
