[project]
name = "pypass"
version = "0.1.4"
description = "A local password manager using rich, polars, and more"
readme = "README.md"
license = "MIT"
authors = [{ name = "Jonny", email = "jonnypeace@outlook.com" }]
dependencies = [
    "rich>=10.2,<15.0",
    "polars",
    "cryptography",
    "pyclip",
    "prompt_toolkit"
]
requires-python = ">=3.11"

[tool.setuptools]
packages = ["pypass"]

[project.scripts]
pypass = "pypass.pypass:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

